--- a/index.html
+++ b/index.html
@@ -1,17 +1,13 @@
-<html>
-  <head>
-    <title>React App</title>
-    <script src='/dist/main.js' defer></script>
-<style>
-.selected {
-  border: solid 2px olive;
-}
-.complete {
-  text-decoration: line-through;
-}
-</style>
-  </head>
-  <body>
-    <div id='root'></div>
-  </body>
+<!DOCTYPE html>
+
+<head>
+  <title>React App</title>
+  <script src='/dist/main.js' defer></script>
+  <link rel="stylesheet" href="/assets/style.css">
+</head>
+
+<body>
+  <div id='root'></div>
+</body>
+
 </html>
